--- a/internal/admin/templates/map3d.html
+++ b/internal/admin/templates/map3d.html
@@ -10,7 +10,12 @@
 <body>
 <div id="cesiumContainer"></div>
 <script>
-const viewer = new Cesium.Viewer('cesiumContainer');
+const viewer = new Cesium.Viewer('cesiumContainer', {
+  terrainProvider: Cesium.createWorldTerrain(),
+  shadows: true,
+  shouldAnimate: true
+});
+viewer.scene.globe.enableLighting = true;
 async function load(){
   const res = await fetch('/map-data');
   const data = await res.json();
@@ -43,6 +48,20 @@ async function load(){
         }
       });
     }
+  });
+
+  data.missions.forEach(m => {
+    viewer.entities.add({
+      position: Cesium.Cartesian3.fromDegrees(m.lon, m.lat),
+      ellipse: {
+        semiMinorAxis: m.radius_km * 1000,
+        semiMajorAxis: m.radius_km * 1000,
+        material: Cesium.Color.BLUE.withAlpha(0.2),
+        outline: true,
+        outlineColor: Cesium.Color.BLUE
+      },
+      label: { text: m.name, verticalOrigin: Cesium.VerticalOrigin.TOP }
+    });
   });
 }
 setInterval(load, 1000);
