--- a/grafana-dashboard.json.tmpl
+++ b/grafana-dashboard.json.tmpl
@@ -15,7 +15,7 @@
       "targets": [
         {
           "refId": "A",
-          "datasource": { "type": "greptimedb", "uid": "YOUR_GREPTIMEDB_UID" },
+          "datasource": { "type": "greptimedb", "uid": "{{ env "GREPTIMEDB_DATASOURCE_UID" }}" },
           "rawSql": "SELECT lat, lon, status, battery, cluster_id, drone_id FROM drone_telemetry WHERE $__timeFilter(ts) AND cluster_id IN ($cluster_id)",
           "format": "table"
         }
@@ -62,7 +62,7 @@
       "targets": [
         {
           "refId": "B",
-          "datasource": { "type": "greptimedb", "uid": "YOUR_GREPTIMEDB_UID" },
+          "datasource": { "type": "greptimedb", "uid": "{{ env "GREPTIMEDB_DATASOURCE_UID" }}" },
           "rawSql": "SELECT COUNT(DISTINCT drone_id) AS total_drones FROM drone_telemetry WHERE $__timeFilter(ts) AND cluster_id IN ($cluster_id)",
           "format": "table"
         }
@@ -77,7 +77,7 @@
       "targets": [
         {
           "refId": "C",
-          "datasource": { "type": "greptimedb", "uid": "YOUR_GREPTIMEDB_UID" },
+          "datasource": { "type": "greptimedb", "uid": "{{ env "GREPTIMEDB_DATASOURCE_UID" }}" },
           "rawSql": "SELECT AVG(battery) AS avg_battery FROM drone_telemetry WHERE $__timeFilter(ts) AND cluster_id IN ($cluster_id)",
           "format": "table"
         }
@@ -92,7 +92,7 @@
       "targets": [
         {
           "refId": "D",
-          "datasource": { "type": "greptimedb", "uid": "YOUR_GREPTIMEDB_UID" },
+          "datasource": { "type": "greptimedb", "uid": "{{ env "GREPTIMEDB_DATASOURCE_UID" }}" },
           "rawSql": "SELECT ts, cluster_id, drone_id, lat, lon, alt, battery, status FROM drone_telemetry WHERE $__timeFilter(ts) AND cluster_id IN ($cluster_id) ORDER BY ts DESC LIMIT 50",
           "format": "table"
         }
@@ -107,7 +107,7 @@
       "targets": [
         {
           "refId": "E",
-          "datasource": { "type": "greptimedb", "uid": "YOUR_GREPTIMEDB_UID" },
+          "datasource": { "type": "greptimedb", "uid": "{{ env "GREPTIMEDB_DATASOURCE_UID" }}" },
           "rawSql": "SELECT id, name, objective, description, region_name FROM mission_metadata",
           "format": "table"
         }
@@ -122,13 +122,13 @@
       "targets": [
         {
           "refId": "F",
-          "datasource": { "type": "greptimedb", "uid": "YOUR_GREPTIMEDB_UID" },
+          "datasource": { "type": "greptimedb", "uid": "{{ env "GREPTIMEDB_DATASOURCE_UID" }}" },
           "rawSql": "SELECT lat, lon FROM drone_telemetry WHERE $__timeFilter(ts) AND cluster_id IN ($cluster_id)",
           "format": "table"
         },
         {
           "refId": "G",
-          "datasource": { "type": "greptimedb", "uid": "YOUR_GREPTIMEDB_UID" },
+          "datasource": { "type": "greptimedb", "uid": "{{ env "GREPTIMEDB_DATASOURCE_UID" }}" },
           "rawSql": "SELECT lat, lon FROM enemy_detection WHERE $__timeFilter(ts)",
           "format": "table"
         }
@@ -159,7 +159,7 @@
       "targets": [
         {
           "refId": "H",
-          "datasource": { "type": "greptimedb", "uid": "YOUR_GREPTIMEDB_UID" },
+          "datasource": { "type": "greptimedb", "uid": "{{ env "GREPTIMEDB_DATASOURCE_UID" }}" },
           "rawSql": "SELECT $__timeGroupAlias(ts, 1m) as time, COUNT(*) as detections FROM enemy_detection WHERE $__timeFilter(ts) GROUP BY time ORDER BY time",
           "format": "time_series"
         }
@@ -175,7 +175,7 @@
       "targets": [
         {
           "refId": "I",
-          "datasource": { "type": "greptimedb", "uid": "YOUR_GREPTIMEDB_UID" },
+          "datasource": { "type": "greptimedb", "uid": "{{ env "GREPTIMEDB_DATASOURCE_UID" }}" },
           "rawSql": "SELECT confidence FROM enemy_detection WHERE $__timeFilter(ts)",
           "format": "table"
         }
@@ -191,7 +191,7 @@
       "targets": [
         {
           "refId": "J",
-          "datasource": { "type": "greptimedb", "uid": "YOUR_GREPTIMEDB_UID" },
+          "datasource": { "type": "greptimedb", "uid": "{{ env "GREPTIMEDB_DATASOURCE_UID" }}" },
           "rawSql": "SELECT COUNT(*) FROM enemy_detection WHERE $__timeFilter(ts)",
           "format": "time_series"
         }
@@ -207,7 +207,7 @@
       "targets": [
         {
           "refId": "K",
-          "datasource": { "type": "greptimedb", "uid": "YOUR_GREPTIMEDB_UID" },
+          "datasource": { "type": "greptimedb", "uid": "{{ env "GREPTIMEDB_DATASOURCE_UID" }}" },
           "rawSql": "SELECT ROUND(confidence, 1) AS bucket, COUNT(*) AS count FROM enemy_detection WHERE $__timeFilter(ts) GROUP BY bucket ORDER BY bucket",
           "format": "table"
         }
@@ -223,7 +223,7 @@
       "targets": [
         {
           "refId": "L",
-          "datasource": { "type": "greptimedb", "uid": "YOUR_GREPTIMEDB_UID" },
+          "datasource": { "type": "greptimedb", "uid": "{{ env "GREPTIMEDB_DATASOURCE_UID" }}" },
           "rawSql": "SELECT lat, lon, LAG(lat) OVER (PARTITION BY drone_id ORDER BY ts) AS prev_lat, LAG(lon) OVER (PARTITION BY drone_id ORDER BY ts) AS prev_lon FROM drone_telemetry WHERE $__timeFilter(ts) AND cluster_id IN ($cluster_id)",
           "format": "table"
         }
@@ -254,7 +254,7 @@
       "targets": [
         {
           "refId": "M",
-          "datasource": { "type": "greptimedb", "uid": "YOUR_GREPTIMEDB_UID" },
+          "datasource": { "type": "greptimedb", "uid": "{{ env "GREPTIMEDB_DATASOURCE_UID" }}" },
           "rawSql": "SELECT corridor_id, lat, lon, seq FROM flight_corridors ORDER BY corridor_id, seq",
           "format": "table"
         }
@@ -285,7 +285,7 @@
       "targets": [
         {
           "refId": "N",
-          "datasource": { "type": "greptimedb", "uid": "YOUR_GREPTIMEDB_UID" },
+          "datasource": { "type": "greptimedb", "uid": "{{ env "GREPTIMEDB_DATASOURCE_UID" }}" },
           "rawSql": "SELECT alt FROM drone_telemetry WHERE $__timeFilter(ts) AND cluster_id IN ($cluster_id)",
           "format": "table"
         }
@@ -301,7 +301,7 @@
       "targets": [
         {
           "refId": "O",
-          "datasource": { "type": "greptimedb", "uid": "YOUR_GREPTIMEDB_UID" },
+          "datasource": { "type": "greptimedb", "uid": "{{ env "GREPTIMEDB_DATASOURCE_UID" }}" },
           "rawSql": "SELECT battery FROM drone_telemetry WHERE $__timeFilter(ts) AND cluster_id IN ($cluster_id)",
           "format": "table"
         }
@@ -317,7 +317,7 @@
       "targets": [
         {
           "refId": "P",
-          "datasource": { "type": "greptimedb", "uid": "YOUR_GREPTIMEDB_UID" },
+          "datasource": { "type": "greptimedb", "uid": "{{ env "GREPTIMEDB_DATASOURCE_UID" }}" },
           "rawSql": "SELECT lat, lon FROM drone_telemetry WHERE $__timeFilter(ts) AND cluster_id IN ($cluster_id)",
           "format": "table"
         }
@@ -342,7 +342,7 @@
       "targets": [
         {
           "refId": "Q",
-          "datasource": { "type": "greptimedb", "uid": "YOUR_GREPTIMEDB_UID" },
+          "datasource": { "type": "greptimedb", "uid": "{{ env "GREPTIMEDB_DATASOURCE_UID" }}" },
           "rawSql": "SELECT distance_m FROM enemy_detection WHERE $__timeFilter(ts)",
           "format": "table"
         }
@@ -358,7 +358,7 @@
       "targets": [
         {
           "refId": "R",
-          "datasource": { "type": "greptimedb", "uid": "YOUR_GREPTIMEDB_UID" },
+          "datasource": { "type": "greptimedb", "uid": "{{ env "GREPTIMEDB_DATASOURCE_UID" }}" },
           "rawSql": "SELECT $__timeGroupAlias(ts, 1m) AS time, SUM(CASE WHEN event_type='assignment' THEN 1 WHEN event_type='unassignment' THEN -1 ELSE 0 END) AS followers FROM swarm_events WHERE $__timeFilter(ts) AND cluster_id IN ($cluster_id) GROUP BY time ORDER BY time",
           "format": "time_series"
         }
@@ -374,7 +374,7 @@
       "targets": [
         {
           "refId": "S",
-          "datasource": { "type": "greptimedb", "uid": "YOUR_GREPTIMEDB_UID" },
+          "datasource": { "type": "greptimedb", "uid": "{{ env "GREPTIMEDB_DATASOURCE_UID" }}" },
           "rawSql": "SELECT $__timeGroupAlias(ts, 1m) AS time, COUNT(*) AS unassign FROM swarm_events WHERE $__timeFilter(ts) AND event_type='unassignment' AND cluster_id IN ($cluster_id) GROUP BY time ORDER BY time",
           "format": "time_series"
         }
@@ -390,7 +390,7 @@
       "targets": [
         {
           "refId": "T",
-          "datasource": { "type": "greptimedb", "uid": "YOUR_GREPTIMEDB_UID" },
+          "datasource": { "type": "greptimedb", "uid": "{{ env "GREPTIMEDB_DATASOURCE_UID" }}" },
           "rawSql": "SELECT $__timeGroupAlias(ts, 1m) AS time, COUNT(*) AS changes FROM swarm_events WHERE $__timeFilter(ts) AND event_type='formation_change' AND cluster_id IN ($cluster_id) GROUP BY time ORDER BY time",
           "format": "time_series"
         }
@@ -405,7 +405,7 @@
       "targets": [
         {
           "refId": "U",
-          "datasource": { "type": "greptimedb", "uid": "YOUR_GREPTIMEDB_UID" },
+          "datasource": { "type": "greptimedb", "uid": "{{ env "GREPTIMEDB_DATASOURCE_UID" }}" },
           "rawSql": "SELECT movement_pattern, COUNT(*) as count FROM drone_telemetry WHERE $__timeFilter(ts) AND cluster_id IN ($cluster_id) GROUP BY movement_pattern",
           "format": "table"
         }
@@ -420,7 +420,7 @@
       "targets": [
         {
           "refId": "V",
-          "datasource": { "type": "greptimedb", "uid": "YOUR_GREPTIMEDB_UID" },
+          "datasource": { "type": "greptimedb", "uid": "{{ env "GREPTIMEDB_DATASOURCE_UID" }}" },
           "rawSql": "SELECT $__time(ts) AS time, AVG(speed_mps) AS speed FROM drone_telemetry WHERE $__timeFilter(ts) AND cluster_id IN ($cluster_id) GROUP BY time ORDER BY time",
           "format": "time_series"
         }
@@ -435,7 +435,7 @@
       "targets": [
         {
           "refId": "W",
-          "datasource": { "type": "greptimedb", "uid": "YOUR_GREPTIMEDB_UID" },
+          "datasource": { "type": "greptimedb", "uid": "{{ env "GREPTIMEDB_DATASOURCE_UID" }}" },
           "rawSql": "SELECT heading_deg FROM drone_telemetry WHERE $__timeFilter(ts) AND cluster_id IN ($cluster_id)",
           "format": "table"
         }
@@ -450,7 +450,7 @@
       "targets": [
         {
           "refId": "X",
-          "datasource": { "type": "greptimedb", "uid": "YOUR_GREPTIMEDB_UID" },
+          "datasource": { "type": "greptimedb", "uid": "{{ env "GREPTIMEDB_DATASOURCE_UID" }}" },
           "rawSql": "SELECT $__time(ts) AS time, 1 - communication_loss AS reliability FROM simulation_state WHERE $__timeFilter(ts) AND cluster_id IN ($cluster_id) ORDER BY time",
           "format": "time_series"
         }
@@ -465,7 +465,7 @@
       "targets": [
         {
           "refId": "Y",
-          "datasource": { "type": "greptimedb", "uid": "YOUR_GREPTIMEDB_UID" },
+          "datasource": { "type": "greptimedb", "uid": "{{ env "GREPTIMEDB_DATASOURCE_UID" }}" },
           "rawSql": "SELECT $__time(ts) AS time, sensor_noise FROM simulation_state WHERE $__timeFilter(ts) AND cluster_id IN ($cluster_id) ORDER BY time",
           "format": "time_series"
         }
@@ -480,7 +480,7 @@
       "targets": [
         {
           "refId": "Z",
-          "datasource": { "type": "greptimedb", "uid": "YOUR_GREPTIMEDB_UID" },
+          "datasource": { "type": "greptimedb", "uid": "{{ env "GREPTIMEDB_DATASOURCE_UID" }}" },
           "rawSql": "SELECT chaos_mode FROM simulation_state WHERE $__timeFilter(ts) AND cluster_id IN ($cluster_id) ORDER BY ts DESC LIMIT 1",
           "format": "table"
         }
@@ -494,7 +494,7 @@
       "targets": [
         {
           "refId": "AA",
-          "datasource": { "type": "greptimedb", "uid": "YOUR_GREPTIMEDB_UID" },
+          "datasource": { "type": "greptimedb", "uid": "{{ env "GREPTIMEDB_DATASOURCE_UID" }}" },
           "rawSql": "SELECT $__timeGroupAlias(ts,1m) AS time, COUNT(*) AS detections FROM enemy_detection WHERE $__timeFilter(ts) AND cluster_id IN ($cluster_id) GROUP BY time ORDER BY time",
           "format": "time_series"
         }
@@ -509,7 +509,7 @@
       "targets": [
         {
           "refId": "AB",
-          "datasource": { "type": "greptimedb", "uid": "YOUR_GREPTIMEDB_UID" },
+          "datasource": { "type": "greptimedb", "uid": "{{ env "GREPTIMEDB_DATASOURCE_UID" }}" },
           "rawSql": "SELECT $__timeGroupAlias(ts,1m) AS time, COUNT(*) AS assignments FROM swarm_events WHERE $__timeFilter(ts) AND event_type='assignment' AND cluster_id IN ($cluster_id) GROUP BY time ORDER BY time",
           "format": "time_series"
         }
@@ -524,7 +524,7 @@
       "targets": [
         {
           "refId": "AC",
-          "datasource": { "type": "greptimedb", "uid": "YOUR_GREPTIMEDB_UID" },
+          "datasource": { "type": "greptimedb", "uid": "{{ env "GREPTIMEDB_DATASOURCE_UID" }}" },
           "rawSql": "SELECT $__timeGroupAlias(ts,1m) AS time, AVG(speed_mps) AS speed FROM drone_telemetry WHERE $__timeFilter(ts) AND cluster_id IN ($cluster_id) GROUP BY time ORDER BY time",
           "format": "time_series"
         }
@@ -539,7 +539,7 @@
       "targets": [
         {
           "refId": "AD",
-          "datasource": { "type": "greptimedb", "uid": "YOUR_GREPTIMEDB_UID" },
+          "datasource": { "type": "greptimedb", "uid": "{{ env "GREPTIMEDB_DATASOURCE_UID" }}" },
           "rawSql": "SELECT $__timeGroupAlias(ts,1m) AS time, AVG(messages_sent) AS msgs FROM simulation_state WHERE $__timeFilter(ts) AND cluster_id IN ($cluster_id) GROUP BY time ORDER BY time",
           "format": "time_series"
         }
@@ -554,7 +554,7 @@
         "name": "cluster_id",
         "label": "Cluster",
         "description": "Filter telemetry by cluster.",
-        "datasource": { "type": "greptimedb", "uid": "YOUR_GREPTIMEDB_UID" },
+        "datasource": { "type": "greptimedb", "uid": "{{ env "GREPTIMEDB_DATASOURCE_UID" }}" },
         "query": "SELECT DISTINCT cluster_id FROM drone_telemetry",
         "refresh": 1,
         "includeAll": true,
@@ -565,7 +565,7 @@
         "name": "status",
         "label": "Drone Status",
         "description": "Filter drones by status.",
-        "datasource": { "type": "greptimedb", "uid": "YOUR_GREPTIMEDB_UID" },
+        "datasource": { "type": "greptimedb", "uid": "{{ env "GREPTIMEDB_DATASOURCE_UID" }}" },
         "query": "SELECT DISTINCT status FROM drone_telemetry",
         "refresh": 1,
         "includeAll": true,
